--- a/1.html
+++ b/1.html
@@ -10,6 +10,7 @@
 <ol>
     <li><a href ="1.html"> Diablo 3</a></li>
     <li><a href ="2.html"> Path of exile</a></li>
+    <li><a href ="3.html"> HTML</a></li>
 </ol>
 
 <h2>Diablo 3</h2>
