타이틀 변경

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!doctype html>
 <html>
 <head>
-    <title>Games</title>
+    <title>Title</title>
     <meta charset="utf-8">
 </head>
 
 <body>
-    <h1><a href ="index.html"> Games</a></h1>
+    <h1><a href ="index.html"> Title</a></h1>
 <ol>
-    <li><a href ="1.html"> Diablo 3</a></li>
-    <li><a href ="2.html"> Path of exile</a></li>
-    <li><a href ="3.html"> HTML</a></li>
+    <li><a href ="Diablo 3.html"> Diablo 3</a></li>
+    <li><a href ="Path of exile.html"> Path of exile</a></li>
+    <li><a href ="HTML.html"> HTML</a></li>
 </ol>
 
-<h2>Games</h2>
+<h2>test web</h2>
 Hello
 </body>
 </html>
