--- a/Diablo 3.html
+++ b/Diablo 3.html
@@ -33,5 +33,8 @@
     <p>가격은 일반판 16,000원, 
         소장판 99,000원이다. 스위치는 59,800원.
     </p>
+    <p>디아블로 3 <a href="https://diablo3.inven.co.kr/dataninfo/item/list.php?rarity=6"target="_blank">
+        전설 아이템</a>은 여러 개가 있다.
+    </p>
 </body>
 </html>
