--- a/HTML.html
+++ b/HTML.html
@@ -46,5 +46,10 @@
             &lt;a href = "링크"&gt;
         <h3>5. HTML에 특수 문자를 적용하는 방법</h3>
             기본적으로 &amp;&#35;숫자&#59;이지만 &amp;문자&#59;인 경우도 존재
+        <h3>6. HTML에 동영상 적용하는 방법</h3>
+        <iframe width="920" height="527" src="https://www.youtube.com/embed/7T7r_oSp0SE?list=PLuHgQVnccGMDZP7FJ_ZsUrdCGH68ppvPb" 
+        title="WEB1 부록 - 코드의 힘 : 동영상 삽입" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen></iframe>
     </body>
 </html>
